--- a/cat-form.html
+++ b/cat-form.html
@@ -13,36 +13,37 @@
   <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
-  <main>
+<body >
+  <main id="app">
     <header class="bg-primary">
-      <a href="/" class="btn btn-primary back-btn"><i class="fas fa-caret-left mr-2"></i>Back</a>
+      <a href="index.html" class="btn btn-primary back-btn"><i class="fas fa-caret-left mr-2"></i>Back</a>
       <h1 class="text-white text-center p-3">Cat card app</h1>
     </header>
     <section class="container">
       <h2>Cat card form</h2>
       <hr />
-      <form novalidate class="was-validated">
+      <form novalidate class="was-validated" >
         <div class="form-group row">
-          <label for="cardTitle" class="col-sm-2 col-form-label">Card title</label>
-          <input type="text" required class="form-control col-sm-10" id="cardTitle" placeholder="Card title">
+          <label  for="cardTitle" class="col-sm-2 col-form-label">Card title</label>
+          <input id="titre" type="text" required class="form-control col-sm-10" id="cardTitle" placeholder="Card title">
           <div class="invalid-feedback offset-md-2 col-sm-10">
             That field is required. Please provide a value.
           </div>
         </div>
         <div class="form-group row">
           <label for="cardImage" class="col-sm-2 col-form-label">Card image URL</label>
-          <input type="url" required class="form-control col-sm-10" id="cardImage" placeholder="Card image URL">
+          <input id="urlimage" type="url" required class="form-control col-sm-10" id="cardImage" placeholder="Card image URL">
           <div class="invalid-feedback offset-md-2 col-sm-10">
             That field is required and attempt an URL as value. Please provide a value that respect URL format.
           </div>
         </div>
         <div class="form-group row">
           <label for="cardDescription" class="col-sm-2 col-form-label">Card description</label>
-          <textarea class="form-control col-sm-10" id="cardDescription"></textarea>
+          <textarea id="discription" class="form-control col-sm-10" id="cardDescription"></textarea>
         </div>
-        <button class="btn btn-danger">Delete</button>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <!--<button type="submit" class="btn btn-danger">Delete</button>-->
+        <button type="submit" class="btn btn-danger" v-on:click="supprime()">Delete</button>
+        <button type="submit" class="btn btn-primary" v-on:click="conserve()">Save</button>
       </form>
     </section>
     <footer class="bg-light">
@@ -53,5 +54,68 @@
     </footer>
   </main>
 </body>
+<script src="lib/vue.js"  type="text/javascript"></script>
+<script>
+
+
+    new Vue({
+        el: '#app' ,
+        data () {
+            return {
+               titre:null,
+                url:"index.html",
+                urlimage:null,
+                discripton:null,
+            }
+        },
+        methods:{
+            conserve: function() {
+                // if( sessionStorage.getItem("num")==null)
+                // {sessionStorage.setItem("num",1);}
+                // else{
+                //     sessionStorage.setItem("num",parseInt(sessionStorage.getItem("num"))+1)
+                //
+                // }
+
+                this.titre=document.getElementById("titre").value;
+                this.urlimage=document.getElementById("urlimage").value;
+                this.discripton=document.getElementById("discription").value
+                sessionStorage.setItem(this.titre,JSON.stringify({
+                    url:this.urlimage,
+                    discription:this.discripton
+                }));
+
+             // this.url=this.url+"?model=add&titre="+this.titre+"&"+"url="+this.urlimage+"&"+"discription="+this.discripton
+                this.url=this.url+"?model=add";
+                window.event.returnValue=false;
+                window.location.href=this.url;
+       },
+            supprime: function() {
+                // if( sessionStorage.getItem("num")==null)
+                // {sessionStorage.setItem("num",1);}
+                // else{
+                //     sessionStorage.setItem("num",parseInt(sessionStorage.getItem("num"))+1)
+                //
+                // }
+                window.event.returnValue=false;
+
+                this.titre=document.getElementById("titre").value;
+                this.urlimage=document.getElementById("urlimage").value;
+                this.discripton=document.getElementById("discription").value
+                sessionStorage.removeItem(this.titre)
+
+                // this.url=this.url+"?model=add&titre="+this.titre+"&"+"url="+this.urlimage+"&"+"discription="+this.discripton
+                this.url=this.url+"?model=add";
+                window.location.href=this.url;
+            },
+
+
+
+
+        }
+        }
+    )
+
+</script>
 
 </html>
